binrw/tests/ui/conflicting_keyword_imports.stderr
error: conflicting import keyword
 --> $DIR/conflicting_keyword_imports.rs:5:22
  |
5 | #[br(import(a: i32), import_raw(args: (i32, )))]
  |                      ^^^^^^^^^^
